feat(stock): 添加港股分钟级历史数据和增强型日线数据功能
- 新增 get_stock_minute_history 方法支持港股分钟级数据获取
- 新增 get_stock_daily_history_enhanced 方法提供增强型日线数据
- 重构前端交易模态框为独立组件提高代码复用性
- 实现后端交易记录同步到前端状态管理
- 优化持仓页面收益率显示和响应式布局
- 更新国际化文案将资产总览改为财富面板
- 移除 MarketSearch 组件中冗余的 stocks 属性传递
- 添加登录后清除本地模拟数据的初始化逻辑